--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>음양사봇</title>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+
+    <title>음양사봇 WEB</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.13/semantic.css"
           integrity="sha256-lcqhJKENorK80v+ug14UGH5PFBhk9wMZ4tNQTq/IpFo=" crossorigin="anonymous"/>
 
@@ -10,7 +13,7 @@
 <body>
 <div class="ui container" style="padding-top: 15px;">
     <div id="query" class="ui yellow raised segment">
-        <h3 class="ui header">음양사봇</h3>
+        <h3 class="ui header">음양사봇 WEB</h3>
         <div class="ui fluid action input">
             <input type="text" id="input-query" placeholder="식신 또는 힌트를 입력하세요">
             <button class="ui orange button" id="btn-query" type="button">검색</button>
