--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -1,19 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <meta charset="utf-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
     <title>음양사봇 WEB</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.13/semantic.css"
           integrity="sha256-lcqhJKENorK80v+ug14UGH5PFBhk9wMZ4tNQTq/IpFo=" crossorigin="anonymous"/>
 
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+        }
+
+    </style>
+
 </head>
 <body>
-<div class="ui container" style="padding-top: 15px;">
+<!--<div class="ui centered banner ad">-->
+    <!--<ins class="adsbygoogle"-->
+         <!--style="display:inline-block;width:468px;height:60px"-->
+         <!--data-ad-client="ca-pub-2798329742999785"-->
+         <!--data-ad-slot="1854617704"></ins>-->
+    <!--<script>-->
+        <!--(adsbygoogle = window.adsbygoogle || []).push({});-->
+    <!--</script>-->
+<!--</div>-->
+
+<div id="context" class="ui container" style="padding-top: 15px;">
     <div id="query" class="ui yellow raised segment">
-        <h3 class="ui header">음양사봇 WEB</h3>
+        <h3 class="ui header">
+            음양사봇 WEB
+            <div class="sub header">
+                <a href="http://pf.kakao.com/_IcxlJxl" target="_blank"><span>카카오톡 플러스친구 추가</span></a>
+            </div>
+        </h3>
         <div class="ui fluid action input">
             <input type="text" id="input-query" placeholder="식신 또는 힌트를 입력하세요">
             <button class="ui orange button" id="btn-query" type="button">검색</button>
@@ -22,6 +45,9 @@
     <div id="result" style=""></div>
 
 </div>
+</div>
+
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <script
         src="https://code.jquery.com/jquery-3.2.1.js"
         integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
@@ -29,5 +55,8 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.13/semantic.js"
         integrity="sha256-IDf1DTXCXREKhmsRkKy9Xa4J1A99tyDSCC+8B042LJo=" crossorigin="anonymous"></script>
 <script src="app.js"></script>
+<script>
+
+</script>
 </body>
 </html>
