update 26 챕터, web 접속 주소 공지 추가

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -34,7 +34,14 @@
         <h3 class="ui header">
             음양사봇 WEB
             <div class="sub header">
-                <a href="http://pf.kakao.com/_IcxlJxl" target="_blank"><span>카카오톡 플러스친구 추가</span></a>
+                <ul>
+                    <li>
+                        <a href="http://pf.kakao.com/_IcxlJxl" target="_blank"><span>카카오톡 플러스친구 추가</span></a><br/>
+                    </li>
+                    <li>
+                        <strong>접속주소가 변경되었습니다.</strong> (<a href="http://onmyoji.ujacha.net">http://onmyoji.ujacha.net</a>)<br/>
+                    </li>
+                </ul>
             </div>
         </h3>
         <div class="ui fluid action input">
